# carma-velodyne-lidar-driver

./: Dockerfile  README.md
.circleci/: config.yml
.github/workflows/: README.md  auto-merge-workflow.yml  ci.yml  docker.yml  dockerhub.yml
.sonarqube/: sonar-scanner.properties
docker/: build-image.sh  checkout.bash  checkout.sh  install.sh
velodyne_lidar_driver_wrapper/: CMakeLists.txt  package.xml
velodyne_lidar_driver_wrapper/config/: VLP32C-velodyne_convert_node-params.yaml  VLP32C-velodyne_transform_node-params.yaml  parameters.yaml
velodyne_lidar_driver_wrapper/include/: velodyne_lidar_driver_wrapper.h
velodyne_lidar_driver_wrapper/include/velodyne_lidar_driver_wrapper/: velodyne_lidar_driver_wrapper.h  velodyne_lidar_driver_wrapper.hpp  velodyne_lidar_driver_wrapper_config.h  velodyne_lidar_driver_wrapper_config.hpp
velodyne_lidar_driver_wrapper/launch/: velodyne_lidar_driver.launch  velodyne_lidar_driver_launch.py  velodyne_lidar_driver_wrapper.launch  velodyne_lidar_driver_wrapper_launch.py  velodyne_lidar_wrapper.launch
velodyne_lidar_driver_wrapper/src/: main.cpp  velodyne_lidar_driver_wrapper.cpp
